# swim-animator

./: .LICENSE.kate-swp  .Tasks.md.kate-swp  .gitignore  Box.sla  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  COPYING  LICENSE  Makefile  README.md  Splash-sida001.cur  Splash.sla  Splash_autosave_07_04_2026_20_23.sla  Tasks.md  Welcome.sla  cmake_install.cmake  spacely.kdev4  spacely.mk  spacely.project  spacely.txt  spacely.workspace
.claude/: settings.local.json
.codelite/: find-in-files.json  spacely-alexander_forselius.tags  spacely.session
.kdev4/: spacely.kdev4
Debug/: MainFrame.cpp.o.d  main.cpp.o.d  spacely  src_App.cpp.o.d  src_AssetManagerPanel.cpp.o.d  src_ColorSwatchPanel.cpp.o.d  src_Document.cpp.o.d  src_DrawCommands.cpp.o.d  src_DrawDoc.cpp.o.d  src_DrawView.cpp.o.d  src_HierarchyPanel.cpp.o.d  src_KeyframePanel.cpp.o.d  src_MainFrame.cpp.o.d  src_NewDrawingDialog.cpp.o.d  src_Palette.cpp.o.d  src_PropPanel.cpp.o.d  src_ScenePanel.cpp.o.d  src_SettingsDialog.cpp.o.d  src_SmilDoc.cpp.o.d  src_SmilTypes.cpp.o.d  src_SmilView.cpp.o.d  src_SnapEngine.cpp.o.d  src_SnapSettings.cpp.o.d  src_SpaDoc.cpp.o.d  src_SpaSaveAsDialog.cpp.o.d  src_SpaView.cpp.o.d  src_View.cpp.o.d  wxcrafter.cpp.o.d  wxcrafter_bitmaps.cpp.o.d
Swim Animator/: Swim Animator.cbp  Swim Animator.depend  Swim Animator.layout  Swim_AnimatorApp.cpp  Swim_AnimatorApp.h  Swim_AnimatorMain.cpp  Swim_AnimatorMain.h
build-Debug/: CMakeCache.txt  MainFrame.cpp.o.d  Makefile  ObjectsList.txt  cmake_install.cmake  main.cpp.o.d  spacily-app  src_App.cpp.o.d  src_ColorSwatchPanel.cpp.o.d  src_Document.cpp.o.d  src_DrawCommands.cpp.o.d  src_DrawDoc.cpp.o.d  src_DrawView.cpp.o.d  src_MainFrame.cpp.o.d  src_Palette.cpp.o.d  src_PropPanel.cpp.o.d  src_View.cpp.o.d  wxcrafter.cpp.o.d  wxcrafter_bitmaps.cpp.o.d
docs/: _config.yml
kanban/: DONE.md  TODO.md
memory/: MEMORY.md  project_dependencies.md  project_spacely.md  (+1 more)
(+54 files in other folders)
